# fastapi-tutorial

./: .gitignore  main10_mix path, query and body para.py  main11_multiple body para.py  main12_embed single body para.py  main14_nested models.py  main15_declare request data.py  main17_header parameter.py  main18_response_model.py  main19_extra models.py  main20_typing.Union, List and Dict.py  main21_Form data instead of json.py  main22_request file and form with UploadFile.py  main22_request file with UploadFile.py  main23_handling error_add custom header.py  main25_path operation configuration.py  main26_json compatible encoder.py  main27_router about update.py  main28_dependency injection of function and class.py  main29_sub dependency.py  main2_users.py  main30_global dependency.py  main31_dependencies with yield.py  main32_security.py  main33_security_OAuth2 with password (and hashing) bearer with JWT token.py  main34_middleware.py  main35_CORS.py  main3_models.py  main5_read_item.py  main6_read_user_item.py  main7_create_item.py  main8_read_items.py  main8_read_items_queryvalidation.py  main9_path validation.py  main9_read_items_pathparametervalidation.py  pyproject.toml
sql_app/: crud.py  database.py  main.py  schemas.py
