[tool.poetry]
name = "fastapi-tutorial"
version = "0.1.0"
description = ""
authors = ["강석영 <ksge1124@gmail.com>"]
readme = "README.md"
packages = [{include = "fastapi_tutorial"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.88.0"
uvicorn = "^0.20.0"
email-validator = "^1.3.0"
python-multipart = "^0.0.5"
black = "^22.12.0"
python-jose = "^3.3.0"
passlib = "^1.7.4"
sqlalchemy = "^1.4.46"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
